--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 </head>
 <body class="page">
   <header class="nav">
-    <div class="nav__logo"><img src="assets/logo-wordmark.svg" alt="SemeraroGOD"/></div>
+    <div class="nav__logo">Semeraro<span>GOD</span></div>
     <nav class="nav__links">
       <a href="index.html">Home</a>
       <a class="active" href="services.html">Services</a>
