chore: remove logo assets from layout

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 </head>
 <body data-page="home">
-  <div class="loader" id="loader"><img src="assets/logo-monogram.svg" alt="SemeraroGOD"/></div>
+  <div class="loader" id="loader"></div>
   <header class="nav">
-    <div class="nav__logo"><img src="assets/logo-wordmark.svg" alt="SemeraroGOD"></div>
+    <div class="nav__logo">Semeraro<span>GOD</span></div>
     <nav class="nav__links" id="navLinks">
       <a class="active" href="index.html">Home</a>
       <a href="services.html">Services</a>
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="hero__visual" data-aos="fade-left">
-        <img src="assets/logo-icon.svg" alt="SemeraroGOD" />
+        
         <ul>
           <li>+40 launches in 24 months</li>
           <li>Headless builds, Webflow & Shopify</li>
